fix contact spacing

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -236,7 +236,6 @@ h3 {
 .contact-box {
     display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
-    grid-template-rows: repeat(3, minmax(0, 1fr));
     background: var(--salmon);
 }
 
